name:           mssql-odbc
version:        0.1.0.0
description:    ODBC driver for Microsoft SQL Server 
homepage:       https://github.com/byteally/mssql-odbc 
bug-reports:    https://github.com/byteally/mssql-odbc/issues
author:         Magesh 
maintainer:     magesh85@gmail.com 
copyright:      2018 Magesh 
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/byteally/mssql-odbc

library
  hs-source-dirs:
      src
  build-depends:
                base >=4.7 && <5
              , inline-c
              , bytestring
              , vector
              , containers
              , template-haskell
              , text
              , contravariant
              , profunctors
              , transformers
              , mtl
              , time
              , uuid-types
  exposed-modules:
                  Database.MsSQL
                  Database.MsSQL.Internal
  other-modules:
                Database.MsSQL.Internal.Ctx
                Database.MsSQL.Internal.SQLError
                Database.MsSQL.Internal.SQLTypes
                Database.MsSQL.Internal.Conversion
                Paths_mssql_odbc
  if impl(ghc < 8.2.0)
    c-sources:           src/Database/MsSQL/Connection.c
  default-language: Haskell2010
  ghc-options: -Wall
  cc-options: -Wall -Wconversion
  if os(mingw32) || os(win32)
    extra-libraries: odbc32
    include-dirs: "C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\130\\SDK\\Include"
  else
    extra-libraries: odbc
    include-dirs: /opt/microsoft/msodbcsql17/include

test-suite mssql-odbc-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules: MsSQLTest
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                base >=4.7 && <5
              , mssql-odbc
              , tasty
              , tasty-discover ==4.1.3
              , tasty-hunit
              , tasty-quickcheck
              , hedgehog
              , tasty-hedgehog >= 0.2.0.0
              , vector
              , bytestring
              , text
              , time
              , uuid-types
  other-modules:
      Paths_mssql_odbc
  default-language: Haskell2010
