name:           mssql-odbc
version:        0.1.0.0
description:    ODBC driver for Microsoft SQL Server 
homepage:       https://github.com/byteally/mssql-odbc 
bug-reports:    https://github.com/byteally/mssql-odbc/issues
author:         Magesh 
maintainer:     magesh85@gmail.com 
copyright:      2018 Magesh 
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/byteally/mssql-odbc

library
  hs-source-dirs:
                 src
  if impl(ghc < 8.2.0)
    build-depends: inline-c >= 0.5.6.0 && < 0.6.0.0
  else
    build-depends: inline-c >= 0.6.0.0
  build-depends:
                base                   >= 4.7     && < 5
              , bytestring             >= 0.9.2.1 && < 0.11
              , vector                 >= 0.9     && < 0.13
              , containers             >= 0.4.0   && < 0.7
              , template-haskell       
              , text                   >= 0.11    && < 1.3
              , contravariant          >= 1.3     && < 2
              , profunctors            >= 5.2.1   && < 6
              , transformers           >= 0.2     && < 0.6
              , unordered-containers   >= 0.2.4   && < 0.3
              , mtl                    >= 2.0.1   && < 2.3
              , time                   >= 1.7     && < 1.10
              , uuid-types             
              , scientific             >= 0.3.6.2 && < 0.4

  exposed-modules:
                  Database.MSSQL
                  Database.MSSQL.Internal
  other-modules:
                Database.MSSQL.Internal.Ctx
                Database.MSSQL.Internal.SQLError
                Database.MSSQL.Internal.SQLTypes
                Database.MSSQL.Internal.Conversion
                Paths_mssql_odbc
  if impl(ghc < 8.2.0)
    c-sources:           src/Database/MSSQL/Internal.c
  default-language: Haskell2010
  ghc-options: -Wall -Werror
  cc-options: -Wall -Wconversion
  if os(mingw32) || os(win32)
    extra-libraries: odbc32
  else
    extra-libraries: odbc
  include-dirs: include

test-suite mssql-odbc-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules: MsSQLTest
                 Utils
                 SQLBindColTest
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                base                   >= 4.7     && < 5
              , tasty                  >= 0.11    && < 1.3
              , tasty-discover
              , tasty-hunit
              , hedgehog               >= 1.0     && < 1.1  
              , tasty-hedgehog         >= 1.0     && < 1.1
              , vector                 >= 0.9     && < 0.13
              , bytestring             >= 0.9.2.1 && < 0.11              
              , text                   >= 0.11    && < 1.3
              , time                   >= 1.7     && < 1.10
              , uuid-types
              , unordered-containers   >= 0.2.4   && < 0.3
              , mssql-odbc
                      
  other-modules:
      Paths_mssql_odbc
  default-language: Haskell2010